Updated docs + additional implementation